# aevio

./: .env.example  .gitignore  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/analyze/: page.tsx
app/authentication/: page.tsx
app/calculate/: page.tsx
app/journal/: page.tsx
app/myData/: page.tsx
app/onboarding/: layout.tsx  page.tsx
app/planner/: page.tsx
app/profile/: page.tsx
app/tts-test/: page.tsx
app/verify-email/: page.tsx  verify-email-client.tsx
app/workout/: page.tsx
components/: client-app-shell.tsx  loading-screen.tsx  navbar.tsx  site-footer.tsx  smooth-scroll.tsx  theme-provider.tsx
components/analyze/: neural-diagnostics-dialog.tsx
components/planner/: PlannerSetupWizard.tsx
components/ui/: dither.tsx  hero-visual.tsx  integration-diagram.tsx  pre-footer-cta.tsx
components/workout/: ExerciseCard.tsx  WorkoutPlanView.tsx  index.ts
lib/: adk-upstream.ts  agent-coach-payload.ts  agent-today-context.ts  auth-client.ts  auth.ts  coach-context.ts  db.ts  gcs.ts  gemini.ts  ist-time.ts  nutrition-metrics.ts  theme-init-script.ts  user-profile-adk-slice.ts  vision-api.ts
lib/google/: credentials.ts  gemini.ts
lib/hooks/: useDailySummary.ts  useProfile.ts
lib/mock/: workout-plan-mock.ts
prisma/: schema.prisma
scripts/: apply-meal-analysis.ts
services/vision-api/: Dockerfile  README.md  deploy.sh  dev.sh  main.py  pyproject.toml  pyrightconfig.json
services/vision-api/app/: calibration.py  depth.py  main.py  schemas.py  segmentation.py  volume.py
(+83 files in other folders)
