[project]
name = "vision-api"
version = "0.1.0"
description = "FastAPI service for video-based food analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]
