[project]
name = "vision-api"
version = "0.1.0"
description = "FastAPI service for video-based food analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "onnxruntime>=1.23.2",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "scipy>=1.16.3",
    "tenacity>=9.1.4",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
